Tries on week 4

--- a/week_4_iterative_linalg_Jacobi_Seidel_minres.ipynb
+++ b/week_4_iterative_linalg_Jacobi_Seidel_minres.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "rndm = np.random.RandomState(1234)\n",
     "\n",
-    "n = 10\n",
+    "n = 4\n",
     "A = rndm.uniform(size=(n, n)) + np.diagflat([15]*n)\n",
     "b = rndm.uniform(size=n)"
    ]
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,14 +116,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "0.36436161983015336"
+      "text/plain": "0.15386533341135872"
      },
-     "execution_count": 56,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "array([ 0.00000000e+00,  2.22044605e-16,  0.00000000e+00, -1.11022302e-16,\n        0.00000000e+00,  0.00000000e+00, -2.08166817e-17,  0.00000000e+00,\n        0.00000000e+00,  2.22044605e-16])"
+      "text/plain": "array([ 0.00000000e+00, -2.08166817e-17, -1.11022302e-16, -1.11022302e-16])"
      },
-     "execution_count": 58,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,14 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "array([ 0.00000000e+00,  2.22044605e-16,  0.00000000e+00, -1.11022302e-16,\n        0.00000000e+00,  0.00000000e+00, -2.08166817e-17,  0.00000000e+00,\n        0.00000000e+00,  2.22044605e-16])"
+      "text/plain": "array([ 0.00000000e+00, -2.08166817e-17, -1.11022302e-16, -1.11022302e-16])"
      },
-     "execution_count": 60,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,14 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "array([ 0.00000000e+00,  1.11022302e-16, -1.11022302e-16, -1.11022302e-16,\n        0.00000000e+00,  0.00000000e+00, -1.38777878e-17,  1.11022302e-16,\n       -1.38777878e-17,  2.22044605e-16])"
+      "text/plain": "array([ 0.00000000e+00, -6.93889390e-18, -1.11022302e-16, -1.11022302e-16])"
      },
-     "execution_count": 62,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,14 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "array([ 0.00000000e+00,  1.11022302e-16, -1.11022302e-16,  0.00000000e+00,\n        0.00000000e+00,  0.00000000e+00,  6.93889390e-18, -1.11022302e-16,\n       -1.38777878e-17,  0.00000000e+00])"
+      "text/plain": "array([0.00000000e+00, 1.38777878e-17, 0.00000000e+00, 0.00000000e+00])"
      },
-     "execution_count": 65,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,11 +358,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "def minimal_residual(A, b, x0, ni=50):\n",
+    "    x = x0\n",
+    "    i = -1\n",
+    "    for _ in range(ni):\n",
+    "        r = A @ x - b\n",
+    "        A_f = A @ r\n",
+    "        tau = r.T @ A_f / np.linalg.norm(A_f) ** 2\n",
+    "        x -= tau * r\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.00000000e+00, 6.93889390e-18, 0.00000000e+00, 1.11022302e-16])"
+     },
+     "execution_count": 347,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_m = minimal_residual(A, b, np.ones(n))\n",
+    "dif_s = A @ x_m - b\n",
+    "dif_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 1 is different from 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-354-607227a0719b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrndm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muniform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiagflat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrndm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muniform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mx_m\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mminimal_residual\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mdif_s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mA\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mx_m\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdif_s\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-346-d764e826e767>\u001b[0m in \u001b[0;36mminimal_residual\u001b[0;34m(A, b, x0, ni)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mni\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mA\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0mA_f\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mA\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mtau\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mA_f\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA_f\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 1 is different from 4)"
+     ]
+    }
+   ],
+   "source": [
+    "a = rndm.uniform(size=(n, n)) + np.diagflat([4]*n)\n",
+    "b = rndm.uniform(size=n)\n",
+    "x_m = minimal_residual(a, b, np.array((1, 2, 3, 4)).reshape(1, -1))\n",
+    "dif_s = A @ x_m - b\n",
+    "dif_s"
    ]
   },
   {
