--- a/week_1_LU_pivoting.ipynb
+++ b/week_1_LU_pivoting.ipynb
@@ -18,10 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -49,18 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3.    3.    3.    3.    3.    3.   ]\n",
+      " [3.    1.875 1.364 1.071 0.882 0.75 ]\n",
+      " [3.    1.364 0.882 0.652 0.517 0.429]\n",
+      " [3.    1.071 0.652 0.469 0.366 0.3  ]\n",
+      " [3.    0.882 0.517 0.366 0.283 0.231]\n",
+      " [3.    0.75  0.429 0.3   0.231 0.188]]\n"
+     ]
     }
    ],
    "source": [
@@ -74,15 +74,14 @@
     "    for j in range(N):\n",
     "        a[i, j] = 3. / (0.6*i*j + 1)\n",
     "\n",
-    "np.linalg.matrix_rank(a)"
+    "np.linalg.matrix_rank(a)\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Tweak the printing of floating-point numbers, for clarity\n",
@@ -91,33 +90,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.     0.     0.     0.     0.     0.   ]\n",
-      " [ 1.     1.     0.     0.     0.     0.   ]\n",
-      " [ 1.     1.455  1.     0.     0.     0.   ]\n",
-      " [ 1.     1.714  1.742  1.     0.     0.   ]\n",
-      " [ 1.     1.882  2.276  2.039  1.     0.   ]\n",
-      " [ 1.     2.     2.671  2.944  2.354  1.   ]] \n",
+      "[[1.    0.    0.    0.    0.    0.   ]\n",
+      " [1.    1.    0.    0.    0.    0.   ]\n",
+      " [1.    1.455 1.    0.    0.    0.   ]\n",
+      " [1.    1.714 1.742 1.    0.    0.   ]\n",
+      " [1.    1.882 2.276 2.039 1.    0.   ]\n",
+      " [1.    2.    2.671 2.944 2.354 1.   ]] \n",
       "\n",
-      "[[  3.000e+00   3.000e+00   3.000e+00   3.000e+00   3.000e+00   3.000e+00]\n",
-      " [  0.000e+00  -1.125e+00  -1.636e+00  -1.929e+00  -2.118e+00  -2.250e+00]\n",
-      " [  0.000e+00   0.000e+00   2.625e-01   4.574e-01   5.975e-01   7.013e-01]\n",
-      " [  0.000e+00   2.220e-16   0.000e+00  -2.197e-02  -4.480e-02  -6.469e-02]\n",
-      " [  0.000e+00  -4.528e-16   0.000e+00   6.939e-18   8.080e-04   1.902e-03]\n",
-      " [  0.000e+00   4.123e-16   0.000e+00  -1.634e-17   0.000e+00  -1.585e-05]] \n",
+      "[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n",
+      " [ 0.000e+00 -1.125e+00 -1.636e+00 -1.929e+00 -2.118e+00 -2.250e+00]\n",
+      " [ 0.000e+00  0.000e+00  2.625e-01  4.574e-01  5.975e-01  7.013e-01]\n",
+      " [ 0.000e+00  1.110e-16  0.000e+00 -2.197e-02 -4.480e-02 -6.469e-02]\n",
+      " [ 0.000e+00 -2.819e-16  0.000e+00  0.000e+00  8.080e-04  1.902e-03]\n",
+      " [ 0.000e+00  3.369e-16  0.000e+00 -1.541e-18  2.168e-19 -1.585e-05]] \n",
       "\n",
-      "[[  0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00]\n",
-      " [  0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00]\n",
-      " [  0.000e+00   0.000e+00   0.000e+00   2.220e-16  -1.110e-16  -1.665e-16]\n",
-      " [  0.000e+00   0.000e+00   2.220e-16  -5.551e-17  -1.665e-16  -1.665e-16]\n",
-      " [  0.000e+00   0.000e+00  -1.110e-16  -1.665e-16   1.665e-16   5.551e-17]\n",
-      " [  0.000e+00   0.000e+00  -1.665e-16  -1.665e-16   5.551e-17   0.000e+00]]\n"
+      "[[ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00  2.220e-16 -1.110e-16 -1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00  2.220e-16 -5.551e-17 -1.665e-16 -1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00 -1.110e-16  2.776e-16 -2.776e-16  5.551e-17]\n",
+      " [ 0.000e+00  0.000e+00 -1.665e-16 -1.665e-16  5.551e-17  0.000e+00]]\n"
      ]
     }
    ],
@@ -147,10 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [],
    "source": [
     "a1 = a.copy()\n",
@@ -166,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +172,7 @@
        "6"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,24 +183,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]] [[ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]]\n"
+      "[[nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]] [[nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sofya\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:15: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  from ipykernel import kernelapp as app\n",
+      "C:\\Users\\sofya\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:17: RuntimeWarning: invalid value encountered in matmul\n",
+      "C:\\Users\\sofya\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:20: RuntimeWarning: invalid value encountered in matmul\n",
+      "C:\\Users\\sofya\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:15: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  from ipykernel import kernelapp as app\n"
      ]
     }
    ],
@@ -226,13 +235,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 78,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "def if_nonzero(A):\n",
+    "    #флаг опущен\n",
+    "    flag = 0\n",
+    "    n = A.shape[0] + 1\n",
+    "    for i in range(1,n):\n",
+    "        if np.linalg.det(A[:i,:i]) == 0: #если минор нулевой, поднимаем флаг\n",
+    "            flag += 1\n",
+    "            break\n",
+    "    if flag:\n",
+    "        return False\n",
+    "    return True\n",
+    "\n"
    ]
   },
   {
@@ -252,14 +270,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 90,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "#lu-разложение с выбором ведущего элемента:\n",
+    "#изменения в алгоритме следующие:\n",
+    "#при переходе к новой строке в ней выбирается ведущий(наибольший)\n",
+    "#элемент, и столбцы меняются таким образом, чтобы ведущий элемент находился в рабочем столбце\n",
+    "#матрицу перестановок преобразуем параллельно из единичной\n",
+    "\n",
+    "def diy_lup(a):\n",
+    "    N = a.shape[0]\n",
+    "    U = a.copy()\n",
+    "    L = np.eye(N)\n",
+    "    P = np.eye(N)\n",
+    "    \n",
+    "    for j in range(N-1):\n",
+    "        lam = np.eye(N)\n",
+    "        P_temp = np.eye(N)\n",
+    "        tmp = np.argmax(abs(U[j,j:])) + j #столбец, в котором находится максимальный элемент\n",
+    "        P_temp[j, j] = 0\n",
+    "        P_temp[tmp,tmp] = 0\n",
+    "        P_temp[j, tmp] = 1\n",
+    "        P_temp[tmp, j] = 1\n",
+    "        U = U @ P_temp.T\n",
+    "        \n",
+    "        gamma = U[j + 1:, j] / U[j, j]\n",
+    "        lam[j + 1:, j] = -gamma\n",
+    "        U = lam @ U\n",
+    "        \n",
+    "        lam[j + 1:, j] = gamma\n",
+    "        L = L @ lam\n",
+    "        \n",
+    "        P = P @ P_temp.T\n",
+    "    return L, U, P\n",
+    "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initial_matrix(L, U, P):\n",
+    "    return L @ U @ P.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Тест для a True\n",
+      "Тест для a1 False\n",
+      "Нижнетреугольная матрица L =  \n",
+      " [[1.    0.    0.    0.    0.    0.   ]\n",
+      " [1.    1.    0.    0.    0.    0.   ]\n",
+      " [1.    1.143 1.    0.    0.    0.   ]\n",
+      " [1.    1.2   1.179 1.    0.    0.   ]\n",
+      " [1.    1.231 1.294 1.605 1.    0.   ]\n",
+      " [1.    1.25  1.375 2.007 2.076 1.   ]]\n",
+      "Верхнетреугольная матрица U =  \n",
+      " [[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n",
+      " [ 0.000e+00 -2.250e+00  0.000e+00 -1.636e+00 -1.929e+00 -2.118e+00]\n",
+      " [ 0.000e+00  0.000e+00 -1.636e+00 -2.475e-01 -1.437e-01 -6.259e-02]\n",
+      " [ 0.000e+00  2.220e-16  2.220e-16 -9.247e-02 -4.755e-02 -1.920e-02]\n",
+      " [ 0.000e+00 -1.344e-16 -3.565e-16  0.000e+00  1.841e-03  1.181e-03]\n",
+      " [ 0.000e+00 -1.667e-16  2.941e-16 -1.567e-17 -4.337e-19 -1.233e-05]]\n",
+      "Матрица перестановок P = \n",
+      " [[1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 1.]\n",
+      " [0. 1. 0. 0. 0. 0.]]\n",
+      "Исходная матрица через разложение: \n",
+      " a1 =  \n",
+      " [[3.    3.    3.    3.    3.    3.   ]\n",
+      " [3.    3.    1.364 1.071 0.882 0.75 ]\n",
+      " [3.    1.364 0.882 0.652 0.517 0.429]\n",
+      " [3.    1.071 0.652 0.469 0.366 0.3  ]\n",
+      " [3.    0.882 0.517 0.366 0.283 0.231]\n",
+      " [3.    0.75  0.429 0.3   0.231 0.188]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L, U, P = diy_lup(a1)\n",
+    "print(\"Тест для a\", if_nonzero(a))\n",
+    "print(\"Тест для a1\", if_nonzero(a1))\n",
+    "print(\"Нижнетреугольная матрица L = \",\"\\n\", L)\n",
+    "print(\"Верхнетреугольная матрица U = \",\"\\n\", U)\n",
+    "print(\"Матрица перестановок P =\", \"\\n\", P)\n",
+    "print(\"Исходная матрица через разложение:\",\"\\n\", \"a1 = \", \"\\n\", initial_matrix(L, U, P))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нижнетреугольная матрица L =  \n",
+      " [[1.    0.    0.    0.    0.    0.   ]\n",
+      " [1.    1.    0.    0.    0.    0.   ]\n",
+      " [1.    1.143 1.    0.    0.    0.   ]\n",
+      " [1.    1.2   1.65  1.    0.    0.   ]\n",
+      " [1.    1.231 2.09  2.01  1.    0.   ]\n",
+      " [1.    1.25  2.406 2.875 2.346 1.   ]]\n",
+      "Верхнетреугольная матрица U =  \n",
+      " [[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n",
+      " [ 0.000e+00 -2.250e+00 -1.125e+00 -1.636e+00 -1.929e+00 -2.118e+00]\n",
+      " [ 0.000e+00  0.000e+00 -3.506e-01 -2.475e-01 -1.437e-01 -6.259e-02]\n",
+      " [ 0.000e+00  2.220e-16  0.000e+00  2.421e-02  2.021e-02  1.030e-02]\n",
+      " [ 0.000e+00 -2.242e-16  0.000e+00  0.000e+00 -6.462e-04 -5.096e-04]\n",
+      " [ 0.000e+00 -1.124e-16  0.000e+00 -1.238e-18  0.000e+00  6.730e-06]]\n",
+      "Матрица перестановок P = \n",
+      " [[1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 1.]\n",
+      " [0. 1. 0. 0. 0. 0.]]\n",
+      "Исходная матрица через разложение: \n",
+      " a =  \n",
+      " [[3.    3.    3.    3.    3.    3.   ]\n",
+      " [3.    1.875 1.364 1.071 0.882 0.75 ]\n",
+      " [3.    1.364 0.882 0.652 0.517 0.429]\n",
+      " [3.    1.071 0.652 0.469 0.366 0.3  ]\n",
+      " [3.    0.882 0.517 0.366 0.283 0.231]\n",
+      " [3.    0.75  0.429 0.3   0.231 0.188]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L2, U2, P2 = diy_lup(a)\n",
+    "print(\"Нижнетреугольная матрица L = \",\"\\n\", L2)\n",
+    "print(\"Верхнетреугольная матрица U = \",\"\\n\", U2)\n",
+    "print(\"Матрица перестановок P =\", \"\\n\", P2)\n",
+    "print(\"Исходная матрица через разложение:\", \"\\n\", \"a = \",\"\\n\", initial_matrix(L2, U2, P2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -278,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
