--- a/week_1_LU_pivoting.ipynb
+++ b/week_1_LU_pivoting.ipynb
@@ -19,9 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -80,9 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Tweak the printing of floating-point numbers, for clarity\n",
@@ -98,26 +94,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.     0.     0.     0.     0.     0.   ]\n",
-      " [ 1.     1.     0.     0.     0.     0.   ]\n",
-      " [ 1.     1.455  1.     0.     0.     0.   ]\n",
-      " [ 1.     1.714  1.742  1.     0.     0.   ]\n",
-      " [ 1.     1.882  2.276  2.039  1.     0.   ]\n",
-      " [ 1.     2.     2.671  2.944  2.354  1.   ]] \n",
+      "[[1.    0.    0.    0.    0.    0.   ]\n",
+      " [1.    1.    0.    0.    0.    0.   ]\n",
+      " [1.    1.455 1.    0.    0.    0.   ]\n",
+      " [1.    1.714 1.742 1.    0.    0.   ]\n",
+      " [1.    1.882 2.276 2.039 1.    0.   ]\n",
+      " [1.    2.    2.671 2.944 2.354 1.   ]] \n",
       "\n",
-      "[[  3.000e+00   3.000e+00   3.000e+00   3.000e+00   3.000e+00   3.000e+00]\n",
-      " [  0.000e+00  -1.125e+00  -1.636e+00  -1.929e+00  -2.118e+00  -2.250e+00]\n",
-      " [  0.000e+00   0.000e+00   2.625e-01   4.574e-01   5.975e-01   7.013e-01]\n",
-      " [  0.000e+00   2.220e-16   0.000e+00  -2.197e-02  -4.480e-02  -6.469e-02]\n",
-      " [  0.000e+00  -4.528e-16   0.000e+00   6.939e-18   8.080e-04   1.902e-03]\n",
-      " [  0.000e+00   4.123e-16   0.000e+00  -1.634e-17   0.000e+00  -1.585e-05]] \n",
+      "[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n",
+      " [ 0.000e+00 -1.125e+00 -1.636e+00 -1.929e+00 -2.118e+00 -2.250e+00]\n",
+      " [ 0.000e+00  0.000e+00  2.625e-01  4.574e-01  5.975e-01  7.013e-01]\n",
+      " [ 0.000e+00  2.220e-16  0.000e+00 -2.197e-02 -4.480e-02 -6.469e-02]\n",
+      " [ 0.000e+00 -4.528e-16  0.000e+00  6.939e-18  8.080e-04  1.902e-03]\n",
+      " [ 0.000e+00  4.123e-16  0.000e+00 -1.634e-17  0.000e+00 -1.585e-05]] \n",
       "\n",
-      "[[  0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00]\n",
-      " [  0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00]\n",
-      " [  0.000e+00   0.000e+00   0.000e+00   2.220e-16  -1.110e-16  -1.665e-16]\n",
-      " [  0.000e+00   0.000e+00   2.220e-16  -5.551e-17  -1.665e-16  -1.665e-16]\n",
-      " [  0.000e+00   0.000e+00  -1.110e-16  -1.665e-16   1.665e-16   5.551e-17]\n",
-      " [  0.000e+00   0.000e+00  -1.665e-16  -1.665e-16   5.551e-17   0.000e+00]]\n"
+      "[[ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00  2.220e-16 -1.110e-16 -1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00  2.220e-16 -5.551e-17 -1.665e-16 -1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00 -1.110e-16 -1.665e-16  1.665e-16  5.551e-17]\n",
+      " [ 0.000e+00  0.000e+00 -1.665e-16 -1.665e-16  5.551e-17  0.000e+00]]\n"
      ]
     }
    ],
@@ -147,10 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "a1 = a.copy()\n",
@@ -166,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +169,7 @@
        "6"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,24 +180,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]] [[ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]]\n"
+      "[[nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]] [[nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:15: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  from ipykernel import kernelapp as app\n",
+      "C:\\Users\\Admin\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:15: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  from ipykernel import kernelapp as app\n"
      ]
     }
    ],
@@ -226,13 +230,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Для матрицы a условие выполняется\n",
+      "Для матрицы a1 условие не выполняется\n"
+     ]
+    }
+   ],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "def check(s):\n",
+    "    N = s.shape[0]\n",
+    "    t = 0\n",
+    "    for i in range(N):\n",
+    "        if np.linalg.det(s[:i + 1, :i + 1]) != 0:\n",
+    "            t += 1\n",
+    "    if t == N:\n",
+    "        return 'условие выполняется'\n",
+    "    else:\n",
+    "        return 'условие не выполняется'\n",
+    "\n",
+    "print('Для матрицы a {}'.format(check(a)))\n",
+    "print('Для матрицы a1 {}'.format(check(a1)))\n"
    ]
   },
   {
@@ -252,14 +275,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# ... ENTER YOUR CODE HERE ..."
+    "# Исправленная функция для LU-разложения\n",
+    "def diy_lu_1(a):\n",
+    "    \"\"\"Construct the LU decomposition of the input matrix.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    N = a.shape[0]\n",
+    "    u = a.copy()\n",
+    "    L = np.eye(N)\n",
+    "    P = np.eye(N)  # Матрица перестановок\n",
+    "    for j in range(N-1):\n",
+    "        lam = np.eye(N)\n",
+    "        p_j = np.eye(N)  # Матрица перестановок на каждом новом шаге\n",
+    "        # Поиск индекса ненулевого элелемента в столбце:\n",
+    "        i = np.where(u[j:, j] != 0)[0][0] + j  \n",
+    "        # Формирование матрицы перестановок p_j:\n",
+    "        p_j[i, i], p_j[j, j], p_j[i, j], p_j[j, i] = 0, 0, 1, 1\n",
+    "        u = p_j @ u  # Замена строк в матрице U\n",
+    "        P = p_j @ P\n",
+    "        gamma = u[j+1:, j] / u[j, j]\n",
+    "        lam[j+1:, j] = -gamma\n",
+    "        u = lam @ u\n",
+    "        lam[j+1:, j] = gamma\n",
+    "        L = L @ p_j @ lam\n",
+    "    return P @ L, u, P\n",
+    "\n",
+    "\n",
+    "# Функция, которая по LU-разложению матрицы воссоздаёт саму матрицу\n",
+    "def rec_lu(l, u, p):\n",
+    "    return p @ l @ u\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Проверим  на примере матрицы `a`, что новая функция для $LU$-разложения работает:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LU-разложение матрицы a:\n",
+      "Матрица L:\n",
+      "[[1.    0.    0.    0.    0.    0.   ]\n",
+      " [1.    1.    0.    0.    0.    0.   ]\n",
+      " [1.    1.455 1.    0.    0.    0.   ]\n",
+      " [1.    1.714 1.742 1.    0.    0.   ]\n",
+      " [1.    1.882 2.276 2.039 1.    0.   ]\n",
+      " [1.    2.    2.671 2.944 2.354 1.   ]]\n",
+      "Матрица U:\n",
+      "[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n",
+      " [ 0.000e+00 -1.125e+00 -1.636e+00 -1.929e+00 -2.118e+00 -2.250e+00]\n",
+      " [ 0.000e+00  0.000e+00  2.625e-01  4.574e-01  5.975e-01  7.013e-01]\n",
+      " [ 0.000e+00  2.220e-16  0.000e+00 -2.197e-02 -4.480e-02 -6.469e-02]\n",
+      " [ 0.000e+00 -4.528e-16  0.000e+00  6.939e-18  8.080e-04  1.902e-03]\n",
+      " [ 0.000e+00  4.123e-16  0.000e+00 -1.634e-17  0.000e+00 -1.585e-05]]\n",
+      "Матрица перестановок P:\n",
+      "[[1. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('LU-разложение матрицы a:\\nМатрица L:\\n{}\\nМатрица U:\\n{}\\nМатрица перестановок P:\\n{}'.format(*diy_lu_1(a)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "И на примере матрицы `a1`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LU-разложение матрицы a1:\n",
+      "Матрица L:\n",
+      "[[ 1.     0.     0.     0.     0.     0.   ]\n",
+      " [ 1.     1.     0.     0.     0.     0.   ]\n",
+      " [ 1.     0.     1.     0.     0.     0.   ]\n",
+      " [ 1.     1.179 -0.09   1.     0.     0.   ]\n",
+      " [ 1.     1.294 -0.157  1.635  1.     0.   ]\n",
+      " [ 1.     1.375 -0.208  2.07   2.082  1.   ]]\n",
+      "Матрица U:\n",
+      "[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n",
+      " [ 0.000e+00 -1.636e+00 -2.118e+00 -2.348e+00 -2.483e+00 -2.571e+00]\n",
+      " [ 0.000e+00  0.000e+00 -1.636e+00 -1.929e+00 -2.118e+00 -2.250e+00]\n",
+      " [ 0.000e+00  2.220e-16  0.000e+00  6.143e-02  1.005e-01  1.272e-01]\n",
+      " [ 0.000e+00 -3.631e-16  0.000e+00  0.000e+00 -1.830e-03 -3.810e-03]\n",
+      " [ 0.000e+00  2.966e-16  0.000e+00  0.000e+00 -4.337e-19  2.567e-05]]\n",
+      "Матрица перестановок P:\n",
+      "[[1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('LU-разложение матрицы a1:\\nМатрица L:\\n{}\\nМатрица U:\\n{}\\nМатрица перестановок P:\\n{}'.format(*diy_lu_1(a1)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Теперь проверим, что написанная функция работает правильно. Для этого воспользуемся функцией `rec_lu`, которая по матрицам $L$, $U$ и $P$ восстанавливает первоначальную матрицу. То есть нужно проверить, выполнятся ли равенство `a`$-$ `rec_lu` $(L, U, P)=0$. Сначала сделаем проверку для матрицы `a`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00 -2.220e-16  1.110e-16  1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00 -2.220e-16  5.551e-17  1.665e-16  1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00  1.110e-16  1.665e-16 -1.665e-16 -5.551e-17]\n",
+      " [ 0.000e+00  0.000e+00  1.665e-16  1.665e-16 -5.551e-17  0.000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L, U, P = diy_lu_1(a)\n",
+    "print((a - rec_lu(L, U, P)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "И аналогично для `a1`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00 -2.220e-16  1.110e-16  1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00 -2.220e-16  5.551e-17  1.665e-16  1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00  1.110e-16  1.665e-16 -1.665e-16 -5.551e-17]\n",
+      " [ 0.000e+00  0.000e+00  1.665e-16  1.665e-16 -5.551e-17  0.000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "L1, U1, P1 = diy_lu_1(a1)\n",
+    "print((a1 - rec_lu(L1, U1, P1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -278,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
