--- a/week_1_quadratic.ipynb
+++ b/week_1_quadratic.ipynb
@@ -1,88 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Solve a quadratic equation, $x^2 + b x + c = 0$.\n",
-    "\n",
-    "\n",
-    "Write a function which receives $b$ and $c$, the coefficients of a monic quadratic polynomial, $x^2 + b x + c$, and returns the pair of its roots. Your function should always return two values, even if quadratic has a double root.\n",
-    "\n",
-    "For example, given a quadratic $x^2 - 2x + 1$, your function should return a pair of $(1, 1)$. Of course, in floating point, your answers may differ from an exact unity.\n",
-    "\n",
-    "Your function also must correctly handle complex roots (to this end, you might need the `cmath` module from the standard library)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def solve_quad(b, c):\n",
-    "    \"\"\"Solve a quadratic equation, x**2 + bx + c = 0.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    b, c : float\n",
-    "       Coefficients\n",
-    "       \n",
-    "    Returns\n",
-    "    -------\n",
-    "    x1, x2 : float or complex\n",
-    "       Roots.\n",
-    "    \"\"\"\n",
-    "    # ... enter your code here ..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "Test the your function on several examples against a calculation by hand. Once you're sure that your function works, try these five test cases below. \n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "Note that the last two test cases are special: they test whether your function handles extreme cases where a too simple approach is prone to a catastrophic cancellation. Make sure your function passes all five tests.\n",
+    "def solve_quad(b,c):  \n",
+    "    if b == 0 and c == 0:\n",
+    "        return 0, 0\n",
+    "    D = (b**2 - 4*c)**0.5\n",
+    "    \n",
+    "    if b > 0:\n",
+    "        D = -D\n",
+    "    \n",
+    "    x1 = (-b + D) / 2\n",
+    "    x2 = c / x1\n",
     "\n",
-    "This exercise is graded, each test case contributes a 20% of the grade. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from numpy import allclose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "    return x1, x2\n",
+    "from numpy import allclose\n",
     "variants = [{'b': 4.0, 'c': 3.0},\n",
     "            {'b': 2.0, 'c': 1.0},\n",
     "            {'b': 0.5, 'c': 4.0},\n",
     "            {'b': 1e10, 'c': 3.0},\n",
-    "            {'b': -1e10, 'c': 4.0},]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "            {'b': -1e10, 'c': 4.0},]\n",
+    "\n",
     "for var in variants:\n",
     "    x1, x2 = solve_quad(**var)\n",
     "    print(allclose(x1*x2, var['c']))"
@@ -91,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -114,9 +68,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
