--- a/week_1_LU_pivoting.ipynb
+++ b/week_1_LU_pivoting.ipynb
@@ -1,27 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# I. $LU$ factorization of a square matrix"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Consider a simple naive implementation of the LU decomposition. \n",
-    "\n",
-    "Note that we're using the `numpy` arrays to represent matrices [do **not** use `np.matrix`]."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -64,8 +46,6 @@
     }
    ],
    "source": [
-    "# Now, generate a full rank matrix and test the naive implementation\n",
-    "\n",
     "import numpy as np\n",
     "\n",
     "N = 6\n",
@@ -80,12 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Tweak the printing of floating-point numbers, for clarity\n",
     "np.set_printoptions(precision=3)"
    ]
   },
@@ -98,26 +75,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.     0.     0.     0.     0.     0.   ]\n",
-      " [ 1.     1.     0.     0.     0.     0.   ]\n",
-      " [ 1.     1.455  1.     0.     0.     0.   ]\n",
-      " [ 1.     1.714  1.742  1.     0.     0.   ]\n",
-      " [ 1.     1.882  2.276  2.039  1.     0.   ]\n",
-      " [ 1.     2.     2.671  2.944  2.354  1.   ]] \n",
+      "[[1.    0.    0.    0.    0.    0.   ]\n",
+      " [1.    1.    0.    0.    0.    0.   ]\n",
+      " [1.    1.455 1.    0.    0.    0.   ]\n",
+      " [1.    1.714 1.742 1.    0.    0.   ]\n",
+      " [1.    1.882 2.276 2.039 1.    0.   ]\n",
+      " [1.    2.    2.671 2.944 2.354 1.   ]] \n",
       "\n",
-      "[[  3.000e+00   3.000e+00   3.000e+00   3.000e+00   3.000e+00   3.000e+00]\n",
-      " [  0.000e+00  -1.125e+00  -1.636e+00  -1.929e+00  -2.118e+00  -2.250e+00]\n",
-      " [  0.000e+00   0.000e+00   2.625e-01   4.574e-01   5.975e-01   7.013e-01]\n",
-      " [  0.000e+00   2.220e-16   0.000e+00  -2.197e-02  -4.480e-02  -6.469e-02]\n",
-      " [  0.000e+00  -4.528e-16   0.000e+00   6.939e-18   8.080e-04   1.902e-03]\n",
-      " [  0.000e+00   4.123e-16   0.000e+00  -1.634e-17   0.000e+00  -1.585e-05]] \n",
+      "[[ 3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00  3.000e+00]\n",
+      " [ 0.000e+00 -1.125e+00 -1.636e+00 -1.929e+00 -2.118e+00 -2.250e+00]\n",
+      " [ 0.000e+00  0.000e+00  2.625e-01  4.574e-01  5.975e-01  7.013e-01]\n",
+      " [ 0.000e+00  1.110e-16  0.000e+00 -2.197e-02 -4.480e-02 -6.469e-02]\n",
+      " [ 0.000e+00 -2.819e-16  0.000e+00  0.000e+00  8.080e-04  1.902e-03]\n",
+      " [ 0.000e+00  3.369e-16  0.000e+00 -1.541e-18  2.168e-19 -1.585e-05]] \n",
       "\n",
-      "[[  0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00]\n",
-      " [  0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00   0.000e+00]\n",
-      " [  0.000e+00   0.000e+00   0.000e+00   2.220e-16  -1.110e-16  -1.665e-16]\n",
-      " [  0.000e+00   0.000e+00   2.220e-16  -5.551e-17  -1.665e-16  -1.665e-16]\n",
-      " [  0.000e+00   0.000e+00  -1.110e-16  -1.665e-16   1.665e-16   5.551e-17]\n",
-      " [  0.000e+00   0.000e+00  -1.665e-16  -1.665e-16   5.551e-17   0.000e+00]]\n"
+      "[[ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
+      " [ 0.000e+00  0.000e+00  0.000e+00  2.220e-16 -1.110e-16 -1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00  2.220e-16 -5.551e-17 -1.665e-16 -1.665e-16]\n",
+      " [ 0.000e+00  0.000e+00 -1.110e-16  2.776e-16 -2.776e-16  5.551e-17]\n",
+      " [ 0.000e+00  0.000e+00 -1.665e-16 -1.665e-16  5.551e-17  0.000e+00]]\n"
      ]
     }
    ],
@@ -132,25 +109,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# II. The need for pivoting"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's tweak the matrix a little bit, we only change a single element:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "a1 = a.copy()\n",
@@ -158,30 +119,57 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]] [[nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]\n",
+      " [nan nan nan nan nan nan]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:15: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  from ipykernel import kernelapp as app\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:17: RuntimeWarning: invalid value encountered in matmul\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:20: RuntimeWarning: invalid value encountered in matmul\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:15: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  from ipykernel import kernelapp as app\n"
+     ]
+    }
+   ],
    "source": [
-    "Resulting matix still has full rank, but the naive LU routine breaks down."
+    "l, u = diy_lu(a1)\n",
+    "\n",
+    "print(l, u)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.linalg.matrix_rank(a1)"
+    "def CheckLu(x):\n",
+    "    for i in range(len(x)):\n",
+    "        if np.linalg.det(x[:i+1,:i+1]) == 0:\n",
+    "            return False\n",
+    "    return True"
    ]
   },
   {
@@ -193,73 +181,129 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]] [[ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]\n",
-      " [ nan  nan  nan  nan  nan  nan]]\n"
+      "True False\n"
      ]
     }
    ],
    "source": [
-    "l, u = diy_lu(a1)\n",
-    "\n",
-    "print(l, u)"
+    "print(CheckLu(a), CheckLu(a1))"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Test II.1\n",
+    "def pivot(x):\n",
+    "    M = x.copy()\n",
+    "    N = x.shape[0]\n",
+    "    p = np.eye(N)\n",
+    "    \n",
+    "    for i in range(N):\n",
+    "        E = np.eye(N)\n",
+    "        position = i + np.argmax(np.abs(M[:, i][i:]))\n",
+    "        \n",
+    "        с = E[position].copy()\n",
+    "        E[position] = E[i]\n",
+    "        E[i] = с\n",
+    "        \n",
+    "        p = E @ p\n",
+    "        M = E @ M   \n",
+    "        \n",
+    "    return p\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "For a naive LU decomposition to work, all leading minors of a matrix should be non-zero. Check if this requirement is satisfied for the two matrices `a` and `a1`.\n",
-    "\n",
-    "(20% of the grade)"
+    "def diy_lu_which_is_better(a):\n",
+    "    N = a.shape[0]\n",
+    "    u = a.copy()\n",
+    "    L = np.eye(N)\n",
+    "    \n",
+    "    P = np.eye(N)\n",
+    "    \n",
+    "    for j in range(N-1): \n",
+    "        lam = np.eye(N)\n",
+    "        gamma = u[j+1:, j] / u[j, j]\n",
+    "        lam[j+1:, j] = -gamma\n",
+    "        u = lam @ u\n",
+    "        #измененная часть с поворотом\n",
+    "        u = u @ pivot(u).T\n",
+    "        P = P @ pivot(u).T\n",
+    "        \n",
+    "        lam[j+1:, j] = gamma\n",
+    "        L = L @ lam\n",
+    "        \n",
+    "    return L, u, P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L, u, P = diy_lu_which_is_better(a)\n",
+    "L1, u1, P1 = diy_lu_which_is_better(a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3.    3.    3.    3.    3.    3.   ]\n",
+      " [3.    1.875 1.364 1.071 0.882 0.75 ]\n",
+      " [3.    1.364 0.882 0.652 0.517 0.429]\n",
+      " [3.    1.071 0.652 0.469 0.366 0.3  ]\n",
+      " [3.    0.882 0.517 0.366 0.283 0.231]\n",
+      " [3.    0.75  0.429 0.3   0.231 0.188]]\n",
+      "[[3.    3.    3.    3.    3.    3.   ]\n",
+      " [3.    1.875 1.364 1.071 0.882 0.75 ]\n",
+      " [3.    1.364 0.882 0.652 0.517 0.429]\n",
+      " [3.    1.071 0.652 0.469 0.366 0.3  ]\n",
+      " [3.    0.882 0.517 0.366 0.283 0.231]\n",
+      " [3.    0.75  0.429 0.3   0.231 0.188]]\n",
+      "-----------------------------------\n",
+      "[[3.    3.    3.    3.    3.    3.   ]\n",
+      " [3.    3.    1.364 1.071 0.882 0.75 ]\n",
+      " [3.    1.364 0.882 0.652 0.517 0.429]\n",
+      " [3.    1.071 0.652 0.469 0.366 0.3  ]\n",
+      " [3.    0.882 0.517 0.366 0.283 0.231]\n",
+      " [3.    0.75  0.429 0.3   0.231 0.188]]\n",
+      "[[3.    3.    3.    3.    3.    3.   ]\n",
+      " [3.    3.    1.364 1.071 0.882 0.75 ]\n",
+      " [3.    1.364 0.882 0.652 0.517 0.429]\n",
+      " [3.    1.071 0.652 0.469 0.366 0.3  ]\n",
+      " [3.    0.882 0.517 0.366 0.283 0.231]\n",
+      " [3.    0.75  0.429 0.3   0.231 0.188]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)\n",
+    "print(L @ u @ P.T)\n",
+    "print('-----------------------------------')\n",
+    "print(a1)\n",
+    "print(L1 @ u1 @ P1.T)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# ... ENTER YOUR CODE HERE ..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Test II.2\n",
-    "\n",
-    "Modify the `diy_lu` routine to implement column pivoting. Keep track of pivots, you can either construct a permutation matrix, or a swap array (your choice).\n",
-    "\n",
-    "(40% of the grade)\n",
-    "\n",
-    "Implement a function to reconstruct the original matrix from a decompositon. Test your routines on the matrices `a` and `a1`.\n",
-    "\n",
-    "(40% of the grade)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
-   "source": [
-    "# ... ENTER YOUR CODE HERE ..."
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -278,9 +322,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
